--- a/chart/templates/dockerfile-build.yml
+++ b/chart/templates/dockerfile-build.yml
@@ -47,8 +47,11 @@ spec:
     description: Extra parameters passed for the push command when pushing images.
     type: string
     default: ""
-  workspaces:
-  - name: source
+
+  resources:
+    inputs:
+      - name: git-source
+        type: git
 
   results:
   - name: IMAGE_DIGEST
@@ -57,7 +60,7 @@ spec:
   steps:
   - name: build
     image: $(params.BUILDER_IMAGE)
-    workingDir: $(workspaces.source.path)
+    workingDir: /workspace/git-source/$(params.CONTEXT)
     script: |
       buildah --storage-driver=$(params.STORAGE_DRIVER) bud \
         $(params.BUILD_EXTRA_ARGS) --format=$(params.FORMAT) \
@@ -71,11 +74,11 @@ spec:
 
   - name: push
     image: $(params.BUILDER_IMAGE)
-    workingDir: $(workspaces.source.path)
+    workingDir: /workspace/git-source/$(params.CONTEXT)
     script: |
       buildah --storage-driver=$(params.STORAGE_DRIVER) push \
         $(params.PUSH_EXTRA_ARGS) --tls-verify=$(params.TLSVERIFY) \
-        --digestfile $(workspaces.source.path)/image-digest $(params.IMAGE) \
+        --digestfile /workspace/git-source/$(params.CONTEXT)/image-digest $(params.IMAGE) \
         docker://$(params.IMAGE)
     volumeMounts:
     - name: varlibcontainers
@@ -85,7 +88,7 @@ spec:
 
   - name: digest-to-results
     image: $(params.BUILDER_IMAGE)
-    script: cat $(workspaces.source.path)/image-digest | tee /tekton/results/IMAGE_DIGEST
+    script: cat /workspace/git-source/$(params.CONTEXT)/image-digest | tee /tekton/results/IMAGE_DIGEST
 
   volumes:
   - name: varlibcontainers
