--- a/chart/templates/dockerfile-build-task.yml
+++ b/chart/templates/dockerfile-build-task.yml
@@ -47,11 +47,8 @@ spec:
     description: Extra parameters passed for the push command when pushing images.
     type: string
     default: ""
-
-  resources:
-    inputs:
-      - name: git-source
-        type: git
+  workspaces:
+  - name: source
 
   results:
   - name: IMAGE_DIGEST
@@ -60,8 +57,10 @@ spec:
   steps:
   - name: build
     image: $(params.BUILDER_IMAGE)
-    workingDir: /workspace/git-source/$(params.CONTEXT)
+    workingDir: $(workspaces.source.path)
     script: |
+      pwd
+      ls /workspace/source
       buildah --storage-driver=$(params.STORAGE_DRIVER) bud \
         $(params.BUILD_EXTRA_ARGS) --format=$(params.FORMAT) \
         --tls-verify=$(params.TLSVERIFY) --no-cache \
@@ -74,11 +73,11 @@ spec:
 
   - name: push
     image: $(params.BUILDER_IMAGE)
-    workingDir: /workspace/git-source/$(params.CONTEXT)
+    workingDir: $(workspaces.source.path)
     script: |
       buildah --storage-driver=$(params.STORAGE_DRIVER) push \
         $(params.PUSH_EXTRA_ARGS) --tls-verify=$(params.TLSVERIFY) \
-        --digestfile /workspace/git-source/$(params.CONTEXT)/image-digest $(params.IMAGE) \
+        --digestfile $(workspaces.source.path)/image-digest $(params.IMAGE) \
         docker://$(params.IMAGE)
     volumeMounts:
     - name: varlibcontainers
@@ -88,7 +87,7 @@ spec:
 
   - name: digest-to-results
     image: $(params.BUILDER_IMAGE)
-    script: cat /workspace/git-source/$(params.CONTEXT)/image-digest | tee /tekton/results/IMAGE_DIGEST
+    script: cat $(workspaces.source.path)/image-digest | tee /tekton/results/IMAGE_DIGEST
 
   volumes:
   - name: varlibcontainers
