--- a/chart/templates/git-resource.yaml
+++ b/chart/templates/git-resource.yaml
@@ -1,11 +1,11 @@
 apiVersion: tekton.dev/v1alpha1
 kind: PipelineResource
 metadata:
-  name: pet-battle-repo
+  name: myapp-repo
 spec:
   params:
   - name: url
     value: https://github.com/jacobsee/pet-battle
   - name: revision
-    value: tekton
+    value: rhtr-demo
   type: git
