--- a/chart/templates/configmap.yaml
+++ b/chart/templates/configmap.yaml
@@ -3,7 +3,7 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name:  "{{ include "pet-battle.fullname" . }}-environment"
+  name:  "{{ include "myapp.fullname" . }}-environment"
 data:
   env: |-
     (function (window) {
