--- a/chart/templates/image-resource.yaml
+++ b/chart/templates/image-resource.yaml
@@ -1,9 +1,9 @@
 apiVersion: tekton.dev/v1alpha1
 kind: PipelineResource
 metadata:
-  name: pet-battle-image
+  name: myapp-image
 spec:
   params:
   - name: url
-    value: image-registry.openshift-image-registry.svc:5000/jasee/pet-battle:latest
+    value: image-registry.openshift-image-registry.svc:5000/jasee/{{ .Values.app_name }}:latest
   type: image
