--- a/chart/templates/service.yaml
+++ b/chart/templates/service.yaml
@@ -2,9 +2,9 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "pet-battle.fullname" . }}
+  name: {{ include "myapp.fullname" . }}
   labels:
-    {{- include "pet-battle.labels" . | nindent 4 }}
+    {{- include "myapp.labels" . | nindent 4 }}
 spec:
   ports:
     - port: 8080
@@ -12,7 +12,7 @@ spec:
       targetPort: 8080
       name: 8080-tcp
   selector:
-    {{- include "pet-battle.selectorLabels" . | nindent 4 }}
+    {{- include "myapp.selectorLabels" . | nindent 4 }}
   sessionAffinity: None
   type: ClusterIP
 status:
